Fix scroll offset
This ensures the anchords appear below the sticky header by offsetting
the scroll by the height of the header.

--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -8,6 +8,14 @@ h1, h2, h3 {
     font-family: Helvetica, Arial, sans-serif;
 }
 
+/*All anchor targets need the height of the sticky #header
+This number will need to be adjusted if the height of #header is
+changed.
+*/
+h1, h2, h3 {
+    scroll-margin-top: 6rem;
+}
+
 a
 {
     color: #fb8c00;
